Added reference to css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p id="someText"></p>
@@ -13,6 +14,9 @@
         console.log('hello world')
         alert('Helloooo World!')
     </script> -->
+    <div>
+        Hello World!
+    </div>
 
 
     <script src="home.js"></script> <!--Needs to be below text I am interacting with-->
